# habilis-beta

./: .gitignore  Cargo.toml  README.md  index.html  index_beta.html
assets/css/: index.css
src/: app.rs  lib.rs  main.rs
src/components/: abstract_section.rs  bibtex.rs  hero.rs  mod.rs  real_world_perf.rs  rethinking_eval.rs  section_wrapper.rs  simulation_perf.rs  system_overview.rs  teaser.rs  video_card.rs
src/islands/: copy_button.rs  mod.rs  task_tabs.rs
src/pages/: home.rs
src/ui/: card.rs  hero.rs  layout.rs  media.rs  mod.rs  typography.rs
style/: tailwind.css
